--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_link: https://github.com/wanghao0922
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/wh.jpg
+avatar: ./assets/img/wh2.jpg
 favicon: ./assets/img/favicon2.png
 favicon_dark: ./assets/img/favicon2.png
 
