--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,9 @@
 title: 
   - 王浩
   - Hao Wang
-position: Embodied Intelligent Robot Engineer
-affiliation: COWAROBOT Co., Ltd., Shanghai, China
+position: Embodied AI Robot Engineer
+affiliation: COWAROBOT
+affiliation: Shanghai, China
 email: wh18405586055@gmail.com
 
 # Search Engine Optimization (SEO)
