--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title:
   - 王浩
   - Hao Wang
 position: Embodied AI Robot Engineer
-affiliation: COWAROBOT
-affiliation: Shanghai, China
+affiliation: COWAROBOT, Shanghai, China
+# affiliation: Shanghai, China
 email: wh18405586055@gmail.com
 
 # Search Engine Optimization (SEO)
