--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,78 +1,24 @@
 main:
-  - title: "BFM-Zero: A Promptable Behavioral Foundation Model for Humanoid Control Using Unsupervised Reinforcement Learning"
-    authors: <strong>Yitang Li</strong>*, Zhengyi Luo*, Tonghe Zhang$, Cunxi Dai$, Anssi Kanervisto, Andrea Tirinzoni, Haoyang Weng, Kris Kitani, Mateusz Guzek, Ahmed Touati, Alessandro Lazaric, Matteo Pirotta†, Guanya Shi† (* Equal Contribution; $ Equal Contribution; † Equal Advising)
+  - title: "CTBC: Contact-Triggered Blind Climbing for Wheeled Bipedal Robots with Instruction Learning and Reinforcement Learning"
+    authors: Rankun Li, <strong><span style="color:#E67E22;">Hao </strong>*, Qi Li, Zhuo Han, Yifei Chu, Linqi Ye, Wende Xie, Wenlong Liao(* Equal Contribution)
     conference_short: In submission
     # conference: Conference on Robot Learning <strong>(CoRL)</strong>, 2025.
-    pdf: https://arxiv.org/abs/2511.04131
-    project: https://lecar-lab.github.io/BFM-Zero/
-    code: https://github.com/LeCAR-Lab/BFM-Zero
+    pdf: https://arxiv.org/abs/2509.02986
+    project: https://ctbc-for-wheeled-bipedal-robots.github.io/
+    # code: https://github.com/LeCAR-Lab/BFM-Zero
     # page: https://class-il.mpi-inf.mpg.de/mnemonics/
     # bibtex: https://class-il.mpi-inf.mpg.de/mnemo/nics/
     # notes: Oral Presentation
-    image: ./assets/img/bfm0.gif
+    image: ./assets/img/ICRA2026-CTBC.png
     
-  - title: "Hold My Beer🍻: Learning Gentle Humanoid Locomotion and End-Effector Stabilization Control"
-    authors: <strong>Yitang Li</strong>, Yuanhang Zhang, Wenli Xiao, Chaoyi Pan, Haoyang Weng, Guanqi He, Tairan He, Guanya Shi
-    conference_short: CoRL
-    conference: Conference on Robot Learning <strong>(CoRL)</strong>, 2025.
-    pdf: https://arxiv.org/abs/2505.24198
-    project: https://lecar-lab.github.io/SoFTA/
-    code: https://github.com/LeCAR-Lab/SoFTA
+  - title: "Learning Decoupled Training Methods for High-Inertia Wheel-Legged Robot to Move and Grasp"
+    authors: Shiyu Zhu, Rankun Li, Qi Li, Guangsheng Li, ZhengDe Ma, <strong><span style="color:#E67E22;">Hao </strong>*, Wenlong Liao, Shenglan Liu, Wende Xie
+    conference_short: In submission
+    # conference: Conference on Robot Learning <strong>(CoRL)</strong>, 2025.
+    pdf: ./assets/files/ICRA26_3493_MS.pdf
+    project: https://decoupled-loco-manipulation.github.io/DeLM.github.io/
+    # code: https://github.com/LeCAR-Lab/SoFTA
     # page: https://class-il.mpi-inf.mpg.de/mnemonics/
     # bibtex: https://class-il.mpi-inf.mpg.de/mnemo/nics/
     # notes: Oral Presentation
-    image: ./assets/img/softa.png
-
-  - title: "Learning Physics-Based Full-Body Human Reaching and Grasping from Brief Walking References"
-    authors: <strong>Yitang Li</strong>*, Mingxian Lin*, Zhuo Lin, Yipeng Deng, Yue Cao, Li Yi (Equal Contribution)
-    conference_short: CVPR
-    conference: IEEE/CVF Conference on Computer Vision and Pattern Recognition <strong>(CVPR)</strong>, 2025.
-    pdf: http://arxiv.org/abs/2503.07481
-    project: https://liyitang22.github.io/phys-reach-grasp/
-    code: https://github.com/liyitang22/phys-reach-grasp
-    # page: https://class-il.mpi-inf.mpg.de/mnemonics/
-    # bibtex: https://class-il.mpi-inf.mpg.de/mnemo/nics/
-    # notes: Oral Presentation
-    image: ./assets/img/walk.png
-
-  - title: "HDMI: Learning Interactive Humanoid Whole-Body Control from Human Videos"
-    authors: Haoyang Weng, <strong>Yitang Li</strong>, Nikhil Sobanbabu, Zihan Wang, Zhengyi Luo, Tairan He, Deva Ramanan, Guanya Shi
-    conference_short: In submission
-    # conference: European Conference on Computer Vision <strong>(ECCV)</strong>, 2024.
-    pdf: https://arxiv.org/abs/2509.16757
-    code: https://github.com/LeCAR-Lab/HDMI?tab=readme-ov-file
-    project: https://hdmi-humanoid.github.io/#/
-    image: ./assets/img/hdmi.png
-    # notes: Early Accept
-    
-  - title: "FreeMotion: MoCap-Free Human Motion Synthesis with Multimodal Large Language Models"
-    authors: Zhikai Zhang, <strong>Yitang Li</strong>, Haofeng Huang, Mingxian Lin, Li Yi
-    conference_short: ECCV
-    conference: European Conference on Computer Vision <strong>(ECCV)</strong>, 2024.
-    pdf: https://arxiv.org/abs/2406.10740.pdf
-    # code: https://github.com/MrGiovanni/ContinualLearning
-    project: https://zzk273.github.io/freemotion.github.io/
-    image: ./assets/img/freemotion.png
-    # notes: Early Accept
-
-  - title: "EmbRACE3K: Embodied Reasoning and Action in Complex Environments"
-    authors: Mingxian Lin*, Wei Huang*, <strong>Yitang Li</strong>, Chengjie Jiang, Kui Wu, Fangwei Zhong, Shengju Qian, Xin Wang, Xiaojuan Qi
-    conference_short: In submission
-    # conference: European Conference on Computer Vision <strong>(ECCV)</strong>, 2024.
-    pdf: https://arxiv.org/pdf/2507.10548
-    code: "https://github.com/mxllc/EmbRACE-3K"
-    project: "https://mxllc.github.io/EmbRACE-3K"
-    image: ./assets/img/embrace3k.png
-    # notes: Early Accept
-
-  - title: "MutualNeRF: Improve the Performance of NeRF under Limited Samples with Mutual Information Theory"
-    authors: Zifan Wang*, Jingwei Li*, <strong>Yitang Li</strong>, Yunze Liu (Equal Contribution)
-    conference_short: UAI
-    conference: The Conference on Uncertainty in Artificial Intelligence, 2025.
-    pdf: https://arxiv.org/abs/2505.11386
-    # code: https://github.com/MrGiovanni/ContinualLearning
-    # project: https://zzk273.github.io/freemotion.github.io/
-    image: ./assets/img/mutualnerf.png
-    # notes: Early Accept
-
-
+    image: ./assets/img/ICRA26_3493_MS.png
